--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,33 @@ plugins {
     id 'java'
 }
 
-group 'mnta.sck'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation(
+            "com.codeborne:selenide:6.12.3",
+            "com.github.javafaker:javafaker:1.0.2",
+            "org.junit.jupiter:junit-jupiter:5.9.2",
+            "org.slf4j:slf4j-simple:2.0.6",
+            "io.qameta.allure:allure-selenide:2.21.0",
+            "io.github.bonigarcia:webdrivermanager:5.3.2",
+            "org.seleniumhq.selenium:selenium-java:4.8.3"
+    )
 }
 
+compileJava {
+    options.encoding = 'UTF-8'
+}
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
 test {
     useJUnitPlatform()
+}
+test {
+    useJUnitPlatform()
+    systemProperties(System.getProperties())
 }
