--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ dependencies {
             "org.slf4j:slf4j-simple:2.0.6",
             "io.qameta.allure:allure-selenide:2.21.0",
             "io.github.bonigarcia:webdrivermanager:5.3.2",
-            "org.seleniumhq.selenium:selenium-java:4.8.3"
+            "org.seleniumhq.selenium:selenium-java:4.8.3",
+            "org.aeonbits.owner:owner:1.0.12"
     )
 }
 
@@ -25,9 +26,7 @@ compileJava {
 compileTestJava {
     options.encoding = 'UTF-8'
 }
-test {
-    useJUnitPlatform()
-}
+
 test {
     useJUnitPlatform()
     systemProperties(System.getProperties())
