--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
             "io.qameta.allure:allure-selenide:2.21.0",
             "io.github.bonigarcia:webdrivermanager:5.3.2",
             "org.seleniumhq.selenium:selenium-java:4.8.3",
-            "org.aeonbits.owner:owner:1.0.12"
+            "org.aeonbits.owner:owner:1.0.12",
+            "org.assertj:assertj-core:3.24.2"
     )
 }
 
