properties lesson added

--- a/src/test/resources/testing.properties
+++ b/src/test/resources/testing.properties
@@ -1,13 +1,14 @@
+//creates separate Webdriver COnfig to read this file
 webdriver.baseUrl=...
 webdriver.browser=...
 
-
+//creates separate DataBAse to read this file
 service.database.url=...
 service.database.username=...
 service.database.password=...
 
 
-
+//creates separate Api COnfig to read this file
 service.api.url=...
 service.api.username=...
 service.api.password=...
